Fixed plant image z-index and hopefully fixed the main image not loading

--- a/hobbies.css
+++ b/hobbies.css
@@ -370,7 +370,7 @@ html {
 }
 .mainPlant-container {
   position: relative;
-  z-index: 10;
+  z-index: 9;
 }
 .pin-wrapper {
   position: relative;
